--- a/package.json
+++ b/package.json
@@ -9,13 +9,37 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~49.0.5",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
+    "@supabase/supabase-js": "^2.31.0",
+    "@tanstack/react-query": "^4.32.6",
+    "add": "^2.0.6",
+    "expo": "^49.0.6",
+    "expo-file-system": "~15.4.2",
+    "expo-secure-store": "~12.3.1",
+    "expo-sharing": "~11.5.0",
     "expo-status-bar": "~1.6.0",
+    "nativewind": "^2.0.11",
+    "or": "^0.2.0",
     "react": "18.2.0",
-    "react-native": "0.72.3"
+    "react-native": "0.72.3",
+    "react-native-dotenv": "^3.4.9",
+    "react-native-elements": "^3.4.3",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-maps": "1.7.1",
+    "react-native-phone-call": "^1.2.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-swiper": "^1.6.0",
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-vector-icons": "^10.0.0",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "tailwindcss": "3.3.2"
   },
   "private": true
 }
