--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "add": "^2.0.6",
     "expo": "^49.0.6",
     "expo-file-system": "~15.4.2",
+    "expo-location": "~16.1.0",
     "expo-secure-store": "~12.3.1",
     "expo-sharing": "~11.5.0",
     "expo-status-bar": "~1.6.0",
