--- a/app.json
+++ b/app.json
@@ -1,5 +1,14 @@
 {
   "expo": {
+    "plugins": [
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "피클피클이 위치 정보를 사용하려고 합니다.",
+          "isAndroidBackgroundLocationEnabled": true
+        }
+      ]
+    ],
     "name": "pickle-pickle",
     "slug": "pickle-pickle",
     "version": "1.0.0",
