--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "@supabase/supabase-js": "^2.31.0",
     "@tanstack/react-query": "^4.32.6",
     "add": "^2.0.6",
+    "axios": "^1.4.0",
     "expo": "^49.0.6",
-    "expo-file-system": "~15.4.2",
+    "expo-file-system": "~15.4.3",
     "expo-location": "~16.1.0",
     "expo-secure-store": "~12.3.1",
     "expo-sharing": "~11.5.0",
